<resources>
    <string name="app_name" translatable="false">Yet Another Online Store</string>
    <string name="label_favorites">Favorites</string>
    <string name="label_catalog">Catalog</string>
    <string name="label_profile">Profile</string>
    <string name="label_sign_in">Sign In</string>
    <string name="discount_label" translatable="false">-%1$d%%</string>
    <string name="feedbacks_one">%1$d feedback</string>
    <string name="feedbacks_few">%1$d feedbacks</string>
    <string name="feedbacks_many">%1$d feedbacks</string>
    <string name="filters">Filters</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="currency_symbol" translatable="false">₽</string>
    <string name="price_format">%1$s%2$d</string>
    <string name="label_first_name">First Name</string>
    <string name="label_second_name">Second Name</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_button_sign_in">Sign in</string>
    <string name="by_clicking_on_the_sign_in_button_you_accept">By clicking on the Sign in button, you accept</string>
    <string name="loyalty_program_link">
        <![CDATA[
            <a href="https://example.com">the terms of the loyalty program</a>
        ]]>
    </string>
    <string name="by_rating">By rating</string>
    <string name="descending_price">Descending price</string>
    <string name="ascending_price">Ascending price</string>
    <string name="description">Description</string>
    <string name="hide">Hide</string>
    <string name="more">More</string>
    <string name="characteristics">Characteristics</string>
    <string name="ingredients">Ingredients</string>
    <string name="product_code">Product code</string>
    <string name="application_area">Application area</string>
    <string name="country_of_origin">Country of origin</string>
    <string name="favorites">Favorites</string>
    <string name="stores">Stores</string>
    <string name="refund">Refund</string>
    <string name="offer">Offer</string>
    <string name="feedback">Feedback</string>
    <string name="sign_out">Sign Out</string>
    <string name="stub_main_page">Main page</string>
    <string name="promotions">Promotions</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="destination_main">Main</string>
    <string name="destination_catalog">Catalog</string>
    <string name="destination_shopping_cart">Shopping cart</string>
    <string name="destination_promotions">Promotions</string>
    <string name="destination_profile">Profile</string>
    <string name="available_one">Available to order %1$d piece</string>
    <string name="available_few">Available to order %1$d pieces</string>
    <string name="available_many">Available to order %1$d pieces</string>
    <string name="products_one">%1$d product</string>
    <string name="products_few">%1$d products</string>
    <string name="products_many">%1$d products</string>
    <string name="tab_products">Products</string>
    <string name="tab_brands">Brands</string>
</resources>